--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
             <img src="images/rudro2.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/rudro1 (1).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become A Web Developer</h2>
+            <p>I already learned the basic HTML and CSS I can build any simple website I can even teach my grandma how
+                to make simple website, My goal is to build 3 website and learen advance topics</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 </body>
 
