border style and footer added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="orange">Rudro Neel</span> World</h1>
@@ -28,7 +28,7 @@
             <img src="images/rudro2.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/rudro1 (1).png" alt="">
         </div>
@@ -40,7 +40,31 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h2> Full Stack Developer</h2>
+                <h3>2024-present|Pro Level Developer</h3>
+                <p>I am the master of HTML CSS and JAVASCRIPT i know everything needed to make website
+                    function,efficient i
+                    didnt stop with the web i went beyond the most popular javascript framework called vue js i even
+                    know
+                    the deployment, server and security i will give you 100% web solution</p>
+            </div>
+            <div id="baby-web" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3>2022-present | Programming Hero Learner</h3>
+                <p>They didnt offer me a job But i made myself asa a remove web developer i made their website and show
+                    it
+                    to them They liked it and uploaded the content It was Fun working at Programming Hero</p>
+            </div>
+        </div>
+    </section>
 
 </body>
+<footer>
+    <p>Copyright © 2022 Rudro Neel</p>
+</footer>
 
 </html>
