--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="flexible-container">
             <div id="full-stack" class="experience-item">
                 <h2> Full Stack Developer</h2>
-                <h3>2024-present|Pro Level Developer</h3>
+                <h3 class="orange">2024-present|Pro Level Developer</h3>
                 <p>I am the master of HTML CSS and JAVASCRIPT i know everything needed to make website
                     function,efficient i
                     didnt stop with the web i went beyond the most popular javascript framework called vue js i even
@@ -54,7 +54,7 @@
             </div>
             <div id="baby-web" class="experience-item">
                 <h2>Baby Web Developer</h2>
-                <h3>2022-present | Programming Hero Learner</h3>
+                <h3 class="orange">2022-present | Programming Hero Learner</h3>
                 <p>They didnt offer me a job But i made myself asa a remove web developer i made their website and show
                     it
                     to them They liked it and uploaded the content It was Fun working at Programming Hero</p>
